--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 @import url(font-awesome.min.css);
-
-
-body{
-  font-family: "Raleway", sans-serif;
-
+.container {
+  max-width: 100%;
+  width: 60%;
 }
 
 #main {
@@ -15,8 +13,8 @@ body{
   		opacity: 0.95;
   		position: relative;
   		text-align: center;
-  		width: 30em;
   	}
+
 #main .avatar {
 			position: relative;
 			display: block;
@@ -60,87 +58,43 @@ body{
   margin-top: 10em;
 }
 
-ul.icons {
-  cursor: default;
-  list-style: none;
-  padding-left: 0;
-  margin-top: -0.675em;
+
+.icons  {
+  font-size: 40px;
+}
+.icons a{
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.icons a:link {
+   color: black;
+   text-decoration: none;
+}
+
+/* visited link */
+.icons a:visited {
+   color: green;
+   text-decoration: none;
+}
+
+/* mouse over link */
+.icons a:hover {
+   color: grey;
+   text-decoration: none;
 }
 
 .skills{
-  dislay: block;
+  margin-top: 10em;
 }
-ul.icons {
-		cursor: default;
-		list-style: none;
-		padding-left: 0;
-		margin-top: -0.675em;
-	}
 
-		ul.icons li {
-			display: inline-block;
-			padding: 0.675em 0.5em;
-		}
+.projects{
+  margin-top: 10em;
+}
 
-			ul.icons li a {
-				text-decoration: none;
-				position: relative;
-				display: block;
-				width: 3.75em;
-				height: 3.75em;
-				border-radius: 100%;
-				border: solid 1px #c8cccf;
-				line-height: 3.75em;
-				overflow: hidden;
-				text-align: center;
-				text-indent: 3.75em;
-				white-space: nowrap;
-			}
-			ul.icons li a span{
-				color:black;
-  			font-size:10px;
-  			padding:5px 0 10px 0;
-  			display:block;
-			}
+.projects h3{
+  margin-bottom: 1em;
+}
 
-				ul.icons li a:before {
-					-moz-osx-font-smoothing: grayscale;
-					-webkit-font-smoothing: antialiased;
-					font-family: FontAwesome;
-					font-style: normal;
-					font-weight: normal;
-					text-transform: none !important;
-				}
-
-				ul.icons li a:before {
-					color: #ffffff;
-					text-shadow: 1.25px 0px 0px #c8cccf, -1.25px 0px 0px #c8cccf, 0px 1.25px 0px #c8cccf, 0px -1.25px 0px #c8cccf;
-				}
-
-				ul.icons li a:hover:before {
-					text-shadow: 1.25px 0px 0px #6abdd4, -1.25px 0px 0px #6abdd4, 0px 1.25px 0px #6abdd4, 0px -1.25px 0px #6abdd4;
-				}
-
-				ul.icons li a:before {
-					position: absolute;
-					top: 0;
-					left: 0;
-					width: inherit;
-					height: inherit;
-					font-size: 1.85rem;
-					line-height: inherit;
-					text-align: center;
-					text-indent: 0;
-				}
-
-				ul.icons li a:hover {
-					border-color: #6abdd4;
-				}
-
-		@media screen and (max-width: 480px) {
-
-			ul.icons li a:before {
-				font-size: 1.5rem;
-			}
-
-		}
+.projects p{
+  text-align: left;
+}
