--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
   max-width: 800px;
 
 }
+body {font-family: 'Raleway', sans-serif;
+}
+
+i {
+  color: black;
+}
 
 #main {
       padding-top: 10em;
@@ -65,6 +71,7 @@
 .icons a{
   margin-left: 30px;
   margin-right: 30px;
+  color: black;
 }
 .icons a:link {
    color: black;
@@ -73,7 +80,7 @@
 
 /* visited link */
 .icons a:visited {
-   color: green;
+   color: black;
    text-decoration: none;
 }
 
@@ -86,8 +93,15 @@
 .skills{
   margin-top: 10em;
 }
+.skills h3 {
+  margin-bottom: 1em;
+}
 .skills p{
   max-width: 380px;
+  text-align: left;
+}
+.skills h6{
+  text-align: right;
 }
 
 .projects{
